--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -93,7 +93,7 @@
       "flex-layout.col#home-categories-showcase-06"
     ],
     "props": {
-      "horizontalAlign": "center",
+      "horizontalAlign": "around",
       "preventHorizontalStretch": true,
       "preventVerticalStretch": true,
       "blockClass": "home-categories-showcase"
@@ -114,13 +114,13 @@
 
   "image#home-categories-showcase-01": {
     "props": {
-      "src": "assets/icons/tv32.png"
+      "src": "assets/icons/department-shelf/plant.svg"
     }
   },
 
   "link#home-categories-showcase-01": {
     "props": {
-      "label": "32\"",
+      "label": "Giardinaggio",
       "blockClass": "home-categories-showcase-cta"
     }
   },
@@ -139,13 +139,13 @@
 
   "image#home-categories-showcase-02": {
     "props": {
-      "src": "assets/icons/tv43.png"
+      "src": "assets/icons/department-shelf/fan.svg"
     }
   },
 
   "link#home-categories-showcase-02": {
     "props": {
-      "label": "43\"",
+      "label": "Climatizzazione",
       "blockClass": "home-categories-showcase-cta"
     }
   },
@@ -164,13 +164,13 @@
 
   "image#home-categories-showcase-03": {
     "props": {
-      "src": "assets/icons/tv50.png"
+      "src": "assets/icons/department-shelf/dumbbell.svg"
     }
   },
 
   "link#home-categories-showcase-03": {
     "props": {
-      "label": "50\"",
+      "label": "Fitness e benessere",
       "blockClass": "home-categories-showcase-cta"
     }
   },
@@ -189,13 +189,13 @@
 
   "image#home-categories-showcase-04": {
     "props": {
-      "src": "assets/icons/tv55.png"
+      "src": "assets/icons/department-shelf/arredo-giardino.svg"
     }
   },
 
   "link#home-categories-showcase-04": {
     "props": {
-      "label": "55\"",
+      "label": "Arredo giardino",
       "blockClass": "home-categories-showcase-cta"
     }
   },
@@ -214,13 +214,13 @@
 
   "image#home-categories-showcase-05": {
     "props": {
-      "src": "assets/icons/tv65.png"
+      "src": "assets/icons/department-shelf/pool.svg"
     }
   },
 
   "link#home-categories-showcase-05": {
     "props": {
-      "label": "65\"",
+      "label": "Piscine e accessori",
       "blockClass": "home-categories-showcase-cta"
     }
   },
@@ -239,13 +239,13 @@
 
   "image#home-categories-showcase-06": {
     "props": {
-      "src": "assets/icons/tv75.png"
+      "src": "assets/icons/department-shelf/paint-roller.svg"
     }
   },
 
   "link#home-categories-showcase-06": {
     "props": {
-      "label": "75\"",
+      "label": "Bricolage e Fai da te",
       "blockClass": "home-categories-showcase-cta"
     }
   },
